--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <!-- Feature 1 -->
-                <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 border border-green-100">
+                <div class="feature-card bg-white p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 border border-green-100">
                     <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center mb-6">
                     <i data-feather="volume-2" class="text-green-600 w-8 h-8"></i>
                     </div>
@@ -58,7 +58,7 @@
                 </div>
 
                 <!-- Feature 2 -->
-                <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 border border-orange-100">
+                <div class="feature-card bg-white p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 border border-orange-100">
                     <div class="w-16 h-16 bg-orange-100 rounded-full flex items-center justify-center mb-6">
                     <i data-feather="shield" class="text-orange-600 w-8 h-8"></i>
                     </div>
@@ -69,7 +69,7 @@
                 </div>
 
                 <!-- Feature 3 -->
-                <div class="bg-white p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 border border-blue-100">
+                <div class="feature-card bg-white p-8 rounded-2xl shadow-lg hover:shadow-2xl transition-all duration-300 border border-blue-100">
                     <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-6">
                     <i data-feather="bar-chart-2" class="text-blue-600 w-8 h-8"></i>
                     </div>
