--- a/plant-detail.html
+++ b/plant-detail.html
@@ -58,7 +58,7 @@
                     <div class="grid lg:grid-cols-2 gap-12">
                         <!-- Plant Image -->
                         <div class="bg-white rounded-2xl shadow-lg overflow-hidden">
-                            <img src="${plant.image}" alt="${plant.name}" class="w-full h-96 object-cover">
+                            <img src="${plant.image}" alt="${plant.name}" class="w-full h-96 object-cover plant-image">
                         </div>
                         
                         <!-- Plant Info -->
@@ -98,7 +98,10 @@
                                         <i data-feather="volume-2" class="w-4 h-4"></i>
                                         Sesli Anlat
                                     </button>
-                                    <div class="flex-1 bg-white bg-opacity-30 rounded-full h-2"></div>
+                                    <div class="flex-1 bg-white bg-opacity-30 rounded-full h-2 relative overflow-hidden cursor-pointer audio-progress-container" onclick="audioSystem.seekTo(event)">
+                                        <div class="audio-progress bg-white bg-opacity-80 h-full rounded-full transition-all duration-100" style="width: 0%"></div>
+                                    </div>
+                                    <span class="audio-time text-white text-sm font-medium min-w-[80px]">0:00 / 0:00</span>
                                 </div>
                             </div>
                             
