kartlardaki yanma hızı bilgisi yanma direnciyle değiştirildi.

--- a/plants.html
+++ b/plants.html
@@ -31,7 +31,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Aloe Vera</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-200 text-green-900">
-                                Çok Düşük
+                                Çok Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Yüksek su içeriği ve jel yapısı sayesinde yangına karşı çok dayanıklıdır.</p>
@@ -56,7 +56,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Kaktüs</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">
-                                Düşük
+                                Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Su depolama özelliği ve kalın epidermis tabakası yangına karşı koruma sağlar.</p>
@@ -106,7 +106,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Lavanta</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">
-                                Düşük
+                                Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Uçucu yağları ve yaprak yapısı yangına dayanıklıdır.</p>
@@ -131,7 +131,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Biberiye</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">
-                                Düşük
+                                Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Aromatik yağları ve kalın yaprakları yangına karşı koruma sağlar.</p>
@@ -156,7 +156,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Defne</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">
-                                Düşük
+                                Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Kalın yaprakları ve uçucu yağları yangın direncini artırır.</p>
@@ -181,7 +181,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Zeytin</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-200 text-green-900">
-                                Çok Düşük
+                                Çok Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Kalın gövde ve yaprakları ile yangına karşı dayanıklıdır.</p>
@@ -206,7 +206,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Etli Sukulentler</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-200 text-green-900">
-                                Çok Düşük
+                                Çok Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Su depolama özelliği ve kalın epidermis ile yangına karşı çok dayanıklıdır.</p>
@@ -256,7 +256,7 @@
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Ortanca</h3>
                             <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800">
-                                Düşük
+                                Yüksek
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Yüksek su içeriği ve yaprak yapısı yangına karşı koruma sağlar.</p>
