--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <div class="absolute inset-0 z-0" id="vanta-bg"></div>
         <div class="container mx-auto px-4 relative z-10">
             <div class="max-w-4xl mx-auto text-center">
-                <h1 class="text-5xl md:text-7xl font-bold mb-6 bg-gradient-to-r from-green-600 to-orange-500 bg-clip-text text-transparent">
+                <h1 class="text-5xl md:text-7xl font-bold mb-6" style="background: linear-gradient(135deg, var(--forest-green) 0%, var(--leaf-green) 50%, var(--sage-green) 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">
                     Flora Yanma Atlası
                 </h1>
-                <p class="text-xl md:text-2xl mb-8 text-gray-700 leading-relaxed">
+                <p class="text-xl md:text-2xl mb-8 leading-relaxed" style="color: var(--forest-green);">
                     Bitkilerin yanma sırlarını keşfedin! 🌿 Yapay zekâ destekli sesli anlatımla doğanın koruma mekanizmalarını öğrenin.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="plants.html" class="bg-gradient-to-r from-green-500 to-green-600 text-white px-8 py-4 rounded-full font-semibold text-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105">
+                    <a href="plants.html" class="natural-button text-white px-8 py-4 rounded-full font-semibold text-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105">
                         <i data-feather="compass" class="inline mr-2"></i>
                         Bitkileri Keşfet
                     </a>
-                    <a href="about.html" class="border-2 border-green-500 text-green-600 px-8 py-4 rounded-full font-semibold text-lg hover:bg-green-50 transition-all duration-300">
+                    <a href="about.html" class="border-2 border-green-500 text-green-600 px-8 py-4 rounded-full font-semibold text-lg hover:bg-green-50 transition-all duration-300" style="border-color: var(--forest-green); color: var(--forest-green);">
                         <i data-feather="info" class="inline mr-2"></i>
                         Hakkında
                     </a>
@@ -41,9 +41,9 @@
     </section>
 
     <!-- Features Section -->
-    <section class="py-20 bg-gradient-to-b from-white to-green-50">
+    <section class="py-20 sky-gradient">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-16 text-gray-800">Neden Flamazing Flora? ✨</h2>
+            <h2 class="text-4xl font-bold text-center mb-16" style="color: var(--forest-green);">Neden Flamazing Flora? ✨</h2>
             
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <!-- Feature 1 -->
@@ -83,24 +83,24 @@
     </section>
 
     <!-- Stats Section -->
-    <section class="py-16 bg-gradient-to-r from-green-500 to-orange-500 text-white">
+    <section class="py-16 natural-gradient text-white">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
                 <div>
                     <div class="text-4xl font-bold mb-2">10</div>
-                    <div class="text-green-100">Bitki Türü</div>
+                    <div style="color: rgba(255, 255, 255, 0.9);">Bitki Türü</div>
                 </div>
                 <div>
                     <div class="text-4xl font-bold mb-2">100+</div>
-                    <div class="text-green-100">Bilimsel Veri</div>
+                    <div style="color: rgba(255, 255, 255, 0.9);">Bilimsel Veri</div>
                 </div>
                 <div>
                     <div class="text-4xl font-bold mb-2">AI</div>
-                    <div class="text-green-100">Seslendirme</div>
+                    <div style="color: rgba(255, 255, 255, 0.9);">Seslendirme</div>
                 </div>
                 <div>
                     <div class="text-4xl font-bold mb-2">24/7</div>
-                    <div class="text-green-100">Erişilebilir</div>
+                    <div style="color: rgba(255, 255, 255, 0.9);">Erişilebilir</div>
                 </div>
             </div>
         </div>
@@ -130,6 +130,5 @@
             size: 0.8
         });
     </script>
-    <script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
 </html>
