--- a/plants.html
+++ b/plants.html
@@ -25,18 +25,7 @@
             <!-- Plants Grid -->
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <div class="plant-card bg-white rounded-2xl shadow-lg overflow-hidden border border-green-100 hover:border-green-300">
-                    <picture>
-                        <source 
-                            media="(max-width: 768px)" 
-                            srcset="images/plants/aloe-vera-384w.webp 384w,
-                                    images/plants/aloe-vera-768w.webp 768w"
-                            type="image/webp">
-                        <source 
-                            srcset="images/plants/aloe-vera-768w.webp 768w,
-                                    images/plants/aloe-vera-1024w.webp 1024w"
-                            type="image/webp">
-                        <img src="images/plants/aloe-vera.jpg" alt="Aloe Vera" class="w-full h-48 object-cover plant-image" loading="lazy" decoding="async" width="1024" height="768">
-                    </picture>
+                    <img src="images/plants/aloe-vera.jpg" alt="Aloe Vera" class="w-full h-48 object-cover plant-image" loading="lazy" decoding="async">
                     <div class="p-6">
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800">Aloe Vera</h3>
