--- a/bitkiyanmasisitesitubitak-main/privacy.html
+++ b/bitkiyanmasisitesitubitak-main/privacy.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/feather-icons" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body class="bg-white text-gray-800 min-h-screen flex flex-col">
     <custom-navbar></custom-navbar>
@@ -52,7 +53,8 @@
                     <h2 class="text-2xl font-bold mb-4 mt-8">İletişim</h2>
                     <p class="mb-4">
                         Bu gizlilik politikasıyla ilgili sorularınız varsa, lütfen 
-                        GitHub repository'mizden bizimle iletişime geçin.
+                        <a href="/contact.html" class="text-green-600 hover:underline">iletişim</a> 
+                        sayfamızdan bizimle iletişime geçin.
                     </p>
                     
                     <div class="mt-8 p-4 bg-green-50 rounded-xl border border-green-200">
@@ -68,13 +70,11 @@
     <custom-footer></custom-footer>
 
     <!-- Component Scripts -->
-    <script src="navbar.js" defer></script>
-    <script src="footer.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="components/navbar.js"></script>
+    <script src="components/footer.js"></script>
+    <script src="script.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            if (window.feather) feather.replace();
-        });
+        feather.replace();
     </script>
 </body>
 </html>
