--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>Flora Yanma Atlası | Bitki Yanma Bilimi ve Yangın Güvenliği</title>
     <meta name="description" content="Bitkilerin yangına karşı geliştirdiği koruma mekanizmalarını keşfedin. AI destekli sesli anlatımla 10+ bitki türünün yanma özelliklerini öğrenin.">
     <meta name="keywords" content="bitki yanma bilimi, yangın güvenliği, flora atlası, bitki koruma mekanizmaları, AI sesli anlatım">
