Hata düzeltmeleri yapıldı ve Animasyonlar yenilendi

--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,8 @@
     <custom-footer></custom-footer>
 
     <!-- Component Scripts -->
-    <script src="components/navbar.js"></script>
-    <script src="components/footer.js"></script>
+    <script src="components/js/navbar.js" defer></script>
+    <script src="components/js/footer.js" defer></script>
     <script src="script.js"></script>
     <script>
         feather.replace();
