--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
     <custom-footer></custom-footer>
 
     <!-- Component Scripts -->
-    <script src="navbar.js" defer></script>
-    <script src="footer.js" defer></script>
+    <script src="components/js/navbar.js" defer></script>
+    <script src="components/js/footer.js" defer></script>
     <script src="script.js" defer></script>
     <script>
         // Register Service Worker
