--- a/plants.html
+++ b/plants.html
@@ -265,8 +265,8 @@
                     <div class="p-4 md:p-6">
                         <div class="flex justify-between items-start mb-3">
                             <h3 class="text-xl font-bold text-gray-800 hover:text-green-600 transition-colors duration-300">Ortanca 🌸</h3>
-                            <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-green-100 text-green-800 animate-pulse">
-                                Yüksek
+                            <span class="inline-block px-3 py-1 rounded-full text-sm font-semibold bg-yellow-100 text-yellow-800 animate-pulse">
+                                Orta
                             </span>
                         </div>
                         <p class="text-gray-600 mb-4 leading-relaxed">Yüksek su içeriği ve yaprak yapısı yangına karşı koruma sağlar.</p>
@@ -324,6 +324,26 @@
                 observer.observe(card);
             });
             
+            // Link ripple transition for detail links
+            const detailLinks = document.querySelectorAll('a[href^="plant-detail.html"]');
+            const overlay = document.createElement('div');
+            overlay.className = 'ripple-overlay';
+            document.body.appendChild(overlay);
+            detailLinks.forEach(link => {
+                link.addEventListener('click', (e) => {
+                    e.preventDefault();
+                    const rect = e.currentTarget.getBoundingClientRect();
+                    const x = (e.clientX || (rect.left + rect.width/2));
+                    const y = (e.clientY || (rect.top + rect.height/2));
+                    const circle = document.createElement('div');
+                    circle.className = 'ripple-circle';
+                    circle.style.left = x + 'px';
+                    circle.style.top = y + 'px';
+                    overlay.appendChild(circle);
+                    setTimeout(() => { window.location.href = e.currentTarget.href; }, 350);
+                });
+            });
+
             // Mouse takip efekti - Optimized with throttling
             let mouseMoveTimeout;
             document.addEventListener('mousemove', (e) => {
